# avaliacao_de_llm

./: .env  .gitignore  content_sem.txt  final.ipynb  main.ipynb  mensagens_estruturadas.csv  pyproject.toml  result_def.csv  resumos.csv  temp_rpr.pkl  testin.ipynb  utils.py
WhatsApp Chat - Câmara de Graduação/: _chat.txt
