[project]
name = "tcc-whatsapp"
version = "0.1.0"
description = ""
authors = [
    {name = "Lara Esquivel de Brito Santos",email = "laraesquivelsantos@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "bertopic (>=0.17.0,<0.18.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "langchain-core (>=0.3.61,<0.4.0)",
    "langchain-google-genai (>=2.1.4,<3.0.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "chromadb (>=1.0.10,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "wordcloud (>=1.9.4,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tiktoken (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
